--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 # Vite environment variables are exposed to client code only when prefixed with VITE_
 # Add your Gemini / Guggle Generative API key here. Keep this file out of version control.
 VITE_GEMINI_KEY='AIzaSyA3wiJlRYY8bt2d_Nv3Fy7h21iU_CXTaRs'
+VITE_BACKEND_URL=https://guggle-portfolio.onrender.com
