--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = "dist"
-  command = "npm run build"
+  publish = "client/dist"
+  command = "cd client && npm run build"
 
 [[headers]]
   for = "/*.js"
